# __2026_07_03__

./: main.py  practice1.ipynb  pyproject.toml
backend/07_09/: practice1.ipynb
backend/07_17/: practice1.ipynb  practice2.ipynb
backend/07_20/: practice1.ipynb  practice1.py  practice2.py  practice3.ipynb  source.py
backend/07_21/: gradio_stock_app.py  practice4.py
backend/07_24/: practice1.py  practice2.py  practice3.py
backend/iris-predict-service/: app.py  iris_model.joblib
frontend/iris/: index.html  package-lock.json  package.json
frontend/iris/src/: App.tsx  api.ts  index.css  species.ts  types.ts
frontend/iris/src/components/: PredictTab.tsx  ProbabilityBars.tsx  Slider.tsx  TrainTab.tsx
