[project]
name = "2026-07-03-tvdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.20.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
